[package]
name = "bilzaa2dutil"
version = "0.0.2"
edition = "2018"
authors = ["bilal <skillzaa.com@gmail.com>"]
description = "It takes a time and then check the animation and return the current value"
repository = "https://github.com/skillzaa/animation.git"
homepage = "https://github.com/skillzaa/animation.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
