[package]
name = "bilzaa2dutil"
version = "0.0.7"
edition = "2018"
authors = ["bilal <skillzaa.com@gmail.com>"]
description = "Better Documentation and more tests in 0.0.6"
repository = "https://github.com/skillzaa/util.git"
homepage = "https://github.com/skillzaa/util.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
